--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <script>
         const clientId = 'a2436b09d8004f63b8f9e9a994f9c787';  // Substitua pelo seu Client ID do Spotify
-        const redirectUri = 'https://psilva1987.github.io/RepairPCB/';  // Atualize para o URL onde seu app está hospedado
+        const redirectUri = 'https://psilva1987.github.io/PcbRapair/';  // Atualize para o URL onde seu app está hospedado
         let accessToken = '';
 
         function authenticate() {
