--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Controller</title>
+    <title>Spotify Music Player</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -44,12 +44,13 @@
         }
         li {
             margin: 10px 0;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Spotify Controller</h1>
+        <h1>Spotify Music Player</h1>
         <button onclick="authenticate()">Authenticate with Spotify</button>
         <button onclick="play()">Play</button>
         <button onclick="pause()">Pause</button>
@@ -59,14 +60,16 @@
         <button onclick="searchTrack()">Search</button>
         <ul id="searchResults"></ul>
     </div>
+
     <script>
         const clientId = 'a2436b09d8004f63b8f9e9a994f9c787';  // Substitua pelo seu Client ID do Spotify
         const redirectUri = 'https://psilva1987.github.io/PcbRapair/';  // Atualize para o URL onde seu app está hospedado
         let accessToken = '';
+        let deviceId = '';
 
         function authenticate() {
             const scopes = 'user-modify-playback-state user-read-playback-state';
-            const authUrl = `https://accounts.spotify.com/authorize?response_type=token&client_id=${clientId}&scope=${scopes}&redirect_uri=${encodeURIComponent(redirectUri)}`;
+            const authUrl = `https://accounts.spotify.com/authorize?response_type=token&client_id=${clientId}&scope=${encodeURIComponent(scopes)}&redirect_uri=${encodeURIComponent(redirectUri)}`;
             window.location.href = authUrl;
         }
 
@@ -84,17 +87,16 @@
         }
 
         async function controlPlayback(action) {
-            const url = `https://api.spotify.com/v1/me/player/${action}`;
-            const response = await fetch(url, {
-                method: 'POST',
+            await fetch(`https://api.spotify.com/v1/me/player/${action}`, {
+                method: 'PUT',
                 headers: {
-                    'Authorization': `Bearer ${accessToken}`
-                }
+                    'Authorization': `Bearer ${accessToken}`,
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    device_ids: [deviceId]
+                })
             });
-
-            if (!response.ok) {
-                console.error('Playback control failed', response);
-            }
         }
 
         function play() {
@@ -115,9 +117,7 @@
 
         async function searchTrack() {
             const query = document.getElementById('searchQuery').value;
-            if (!query) {
-                return;
-            }
+            if (!query) return;
 
             const url = `https://api.spotify.com/v1/search?type=track&q=${encodeURIComponent(query)}`;
             const response = await fetch(url, {
@@ -146,8 +146,7 @@
         }
 
         async function playTrack(uri) {
-            const url = `https://api.spotify.com/v1/me/player/play`;
-            const response = await fetch(url, {
+            const response = await fetch(`https://api.spotify.com/v1/me/player/play?device_id=${deviceId}`, {
                 method: 'PUT',
                 headers: {
                     'Authorization': `Bearer ${accessToken}`,
@@ -161,7 +160,29 @@
             }
         }
 
-        window.onload = setAccessToken;
+        async function getDevices() {
+            const response = await fetch('https://api.spotify.com/v1/me/player/devices', {
+                headers: {
+                    'Authorization': `Bearer ${accessToken}`
+                }
+            });
+
+            if (response.ok) {
+                const data = await response.json();
+                if (data.devices.length > 0) {
+                    deviceId = data.devices[0].id;
+                } else {
+                    console.error('No devices found');
+                }
+            } else {
+                console.error('Failed to fetch devices', response);
+            }
+        }
+
+        window.onload = async () => {
+            setAccessToken();
+            await getDevices();
+        };
     </script>
 </body>
 </html>
