--- a/index.html
+++ b/index.html
@@ -45,20 +45,31 @@
         li {
             margin: 10px 0;
             cursor: pointer;
+            transition: color 0.3s ease;
+        }
+        li:hover {
+            color: #1DB954;
+        }
+        .hidden {
+            display: none;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Spotify Music Player</h1>
-        <button onclick="authenticate()">Authenticate with Spotify</button>
-        <button onclick="play()">Play</button>
-        <button onclick="pause()">Pause</button>
+        <button id="authButton" onclick="authenticate()">Authenticate with Spotify</button>
+        <button id="playButton" onclick="play()">Play</button>
+        <button id="pauseButton" onclick="pause()">Pause</button>
         <button onclick="nextTrack()">Next</button>
         <button onclick="prevTrack()">Previous</button>
         <input type="text" id="searchQuery" placeholder="Search for a song...">
         <button onclick="searchTrack()">Search</button>
         <ul id="searchResults"></ul>
+        <div id="trackInfo" class="hidden">
+            <p id="trackName"></p>
+            <p id="trackTime"></p>
+        </div>
     </div>
 
     <script>
@@ -66,6 +77,9 @@
         const redirectUri = 'https://psilva1987.github.io/PcbRapair/';  // Atualize para o URL onde seu app está hospedado
         let accessToken = '';
         let deviceId = '';
+        let currentTrack = null;
+        let isPlaying = false;
+        let progressInterval = null;
 
         function authenticate() {
             const scopes = 'user-modify-playback-state user-read-playback-state';
@@ -82,6 +96,7 @@
         function setAccessToken() {
             accessToken = getAccessTokenFromUrl();
             if (accessToken) {
+                document.getElementById('authButton').classList.add('hidden');
                 window.history.pushState('', document.title, window.location.pathname);  // Remove o token da URL
             }
         }
@@ -101,10 +116,21 @@
 
         function play() {
             controlPlayback('play');
+            isPlaying = true;
+            updatePlayPauseButtons();
+            startProgressInterval();
         }
 
         function pause() {
             controlPlayback('pause');
+            isPlaying = false;
+            updatePlayPauseButtons();
+            clearInterval(progressInterval);
+        }
+
+        function updatePlayPauseButtons() {
+            document.getElementById('playButton').classList.toggle('hidden', isPlaying);
+            document.getElementById('pauseButton').classList.toggle('hidden', !isPlaying);
         }
 
         function nextTrack() {
@@ -140,22 +166,29 @@
             tracks.forEach(track => {
                 const li = document.createElement('li');
                 li.textContent = `${track.name} by ${track.artists.map(artist => artist.name).join(', ')}`;
-                li.onclick = () => playTrack(track.uri);
+                li.onclick = () => playTrack(track);
                 searchResults.appendChild(li);
             });
         }
 
-        async function playTrack(uri) {
+        async function playTrack(track) {
+            currentTrack = track;
             const response = await fetch(`https://api.spotify.com/v1/me/player/play?device_id=${deviceId}`, {
                 method: 'PUT',
                 headers: {
                     'Authorization': `Bearer ${accessToken}`,
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ uris: [uri] })
+                body: JSON.stringify({ uris: [track.uri] })
             });
 
-            if (!response.ok) {
+            if (response.ok) {
+                document.getElementById('trackName').textContent = `${currentTrack.name} - ${currentTrack.artists.map(artist => artist.name).join(', ')}`;
+                document.getElementById('trackInfo').classList.remove('hidden');
+                isPlaying = true;
+                updatePlayPauseButtons();
+                startProgressInterval();
+            } else {
                 console.error('Playback failed', response);
             }
         }
@@ -177,6 +210,33 @@
             } else {
                 console.error('Failed to fetch devices', response);
             }
+        }
+
+        async function startProgressInterval() {
+            progressInterval = setInterval(async () => {
+                const response = await fetch('https://api.spotify.com/v1/me/player/currently-playing', {
+                    headers: {
+                        'Authorization': `Bearer ${accessToken}`
+                    }
+                });
+
+                if (response.ok) {
+                    const data = await response.json();
+                    if (data.is_playing) {
+                        const progress = data.progress_ms;
+                        const duration = data.item.duration_ms;
+                        document.getElementById('trackTime').textContent = formatTime(progress) + ' / ' + formatTime(duration);
+                    }
+                } else {
+                    console.error('Failed to fetch currently playing track', response);
+                }
+            }, 1000);
+        }
+
+        function formatTime(ms) {
+            const seconds = Math.floor((ms / 1000) % 60);
+            const minutes = Math.floor((ms / (1000 * 60)) % 60);
+            return `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
         }
 
         window.onload = async () => {
