--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     </div>
 
     <script>
-        const clientId = 'YOUR_CLIENT_ID';  // Substitua pelo seu Client ID do Spotify
-        const redirectUri = 'http://localhost:8000';  // Atualize para o URL onde seu app está hospedado
+        const clientId = 'a2436b09d8004f63b8f9e9a994f9c787';  // Substitua pelo seu Client ID do Spotify
+        const redirectUri = 'https://psilva1987.github.io/PcbRapair/';  // Atualize para o URL onde seu app está hospedado
         let accessToken = '';
         let deviceId = '';
         let currentTrack = null;
