--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             const hash = window.location.hash.substring(1);
             const params = new URLSearchParams(hash);
             const token = params.get('access_token');
+            console.log('URL Hash:', hash);  // Debug: Mostrar o hash da URL
             alert('Token extracted: ' + token);
             return token;
         }
