--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 
     <script>
         // Configurações do App
-        const clientId = 'a320634e6ebf4bb58de016369cf5b1a1';
-        const redirectUri = 'https://psilva1987.github.io/PcbRapair/callback.html';
+        const clientId = 'a320634e6ebf4bb58de016369cf5b1a1'; 
+        const redirectUri = 'https://psilva1987.github.io/PcbRapair/index.html';
         const scopes = [
             'user-read-private',
             'user-read-email',
