--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <script>
         // Configurações do App
         const clientId = 'a320634e6ebf4bb58de016369cf5b1a1'; 
-        const redirectUri = 'https://psilva1987.github.io/PcbRapair/index.html';
+        const redirectUri = 'https://psilva1987.github.io/PcbRapair/callback';
         const scopes = [
             'user-read-private',
             'user-read-email',
